fdo#38786 implement RTF_CHPGN

Change-Id: I0ae693193b4fc8ed155e2d71b06daa80d46da47c